--- a/QuantumultX/Cookie.conf
+++ b/QuantumultX/Cookie.conf
@@ -2,7 +2,7 @@
 #Cookie获取成功后在重写里禁用掉本订阅
 #Cookie失效时在重写里启用本订阅
 
-hostname = ifac*.iqiyi.com, www.52pojie.cn, api.inews.qq.com, commontgw6.reader.qq.com, eventv3.reader.qq.com
+hostname = ifac*.iqiyi.com, www.52pojie.cn, api.inews.qq.com, *.video.qq.com
 
 # 爱奇艺
 ^https?:\/\/iface(\d)?\.iqiyi\.com\/ url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js
@@ -13,5 +13,5 @@ https:\/\/www\.52pojie\.cn\/home\.php\?mod=space url script-request-header https
 # 腾讯新闻
 https:\/\/api\.inews\.qq\.com\/event\/v1\/user\/event\/report\? url script-request-body https://raw.githubusercontent.com/Sunert/Scripts/master/Task/txnews.js
 
-# qq阅读
-^https:\/\/(commontgw6|eventv3)\.reader\.qq\.com\/* url script-request-header https://raw.githubusercontent.com/XidNDD/2020scripts/master/QQReadSign.js
+# 腾讯视频
+^https:\/\/access.video.qq.com\/user\/auth_refresh url script-request-header videoqq.cookie.js
