--- a/QuantumultX/Script.conf
+++ b/QuantumultX/Script.conf
@@ -1,6 +1,6 @@
 # 脚本
 
-hostname = mp.weixin.qq.com, ios.prod.ftl.netflix.com, trade-acs.m.taobao.com, api.bjxkhc.com, api1000.cvxia.com, api.inews.qq.com, 1008610010.yohui.vip, api.dushu.io, www.helloshiyu.com, getway.radio.cn, *.huaerdadi.com, awmattack.*.com,
+hostname = mp.weixin.qq.com, ios.prod.ftl.netflix.com, trade-acs.m.taobao.com, api.bjxkhc.com, api1000.cvxia.com, api.inews.qq.com, 1008610010.yohui.vip, api.dushu.io, www.helloshiyu.com, getway.radio.cn, *.huaerdadi.com, 
 
 # 去微信公众号广告 (By Choler)
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/Wechat.js
@@ -36,7 +36,4 @@ https://www.helloshiyu.com/sleep/user/profile url script-response-body https://r
 
 # 云听
 http://getway.radio.cn/app* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/yt.js
-
-# 咪哩视频
-^https:\/\/awmattack\.(.+)\.com\/(api/member/info|api/video/video/video_play) url script-response-body https://raw.githubusercontent.com/fg11111/huafeihua/master/mlsp.js
 
