--- a/QuantumultX/Cookie.conf
+++ b/QuantumultX/Cookie.conf
@@ -2,10 +2,10 @@
 #Cookie获取成功后在重写里禁用掉本订阅
 #Cookie失效时在重写里启用本订阅
 
-hostname = ifac*.iqiyi.com, www.52pojie.cn, api.inews.qq.com, *.video.qq.com
+hostname = passport.iqiyi.com, www.52pojie.cn, api.inews.qq.com, *.video.qq.com
 
 # 爱奇艺
-^https?:\/\/iface(\d)?\.iqiyi\.com\/ url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js
+^https:\/\/passport\.iqiyi\.com\/apis\/user\/info\.action url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js
 
 # 52破解
 https:\/\/www\.52pojie\.cn\/home\.php\?mod=space url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/52pojie-DailyBonus/52pojie.js
