--- a/QuantumultX/Cookie.conf
+++ b/QuantumultX/Cookie.conf
@@ -1,20 +1,15 @@
-#Cookie获取订阅
-#Cookie获取成功后在重写里禁用掉本订阅
-#Cookie失效时在重写里启用本订阅
+#!name=Get cookie. By NobyDa
+#!desc=该模块适用于定时签到脚本的Cookie获取. 集成: 吾爱破解、爱奇艺、腾讯视频，您可以在使用后手动将其禁用，以免产生不必要的MITM.
+#!system=ios
 
-hostname = passport.iqiyi.com, www.52pojie.cn, api.inews.qq.com, *.video.qq.com
+[Script]
 
-# 爱奇艺
-^https:\/\/passport\.iqiyi\.com\/apis\/user\/info\.action url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js
+爱奇艺获取Cookie = type=http-request,pattern=^https:\/\/passport\.iqiyi\.com\/apis\/user\/,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js
 
-# 52破解
-https:\/\/www\.52pojie\.cn\/home\.php\?mod=space url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/52pojie-DailyBonus/52pojie.js
+吾爱获取Cookie = type=http-request,pattern=https:\/\/www\.52pojie\.cn\/home\.php\?,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/52pojie-DailyBonus/52pojie.js
 
-# 腾讯新闻
-https:\/\/api\.inews\.qq\.com\/event\/v1\/user\/event\/report\? url script-request-body https://raw.githubusercontent.com/Sunert/Scripts/master/Task/txnews.js
-
-# 腾讯视频
-^https:\/\/access.video.qq.com\/user\/auth_refresh url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/videoqq/videoqq.cookie.js
-^https?:\/\/v.qq.com\/x\/bu\/mobile_checkin url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/videoqq/videoqq.cookie.js
+http-request ^https:\/\/access.video.qq.com\/user\/auth_refresh script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/videoqq/videoqq.cookie.js
 
 
+[MITM]
+hostname = %APPEND% passport.iqiyi.com, www.52pojie.cn, *.video.qq.com
